--- a/app/src/main/res/layout/dialog_contact.xml
+++ b/app/src/main/res/layout/dialog_contact.xml
@@ -122,7 +122,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
-                android:background="@color/colorButton" />
+                android:background="@color/light_gray" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cName"
