--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -32,16 +32,29 @@
             android:maxLines="1"
             android:ellipsize="end" />
 
-        <TextView
-            android:id="@+id/mContent"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Contents"
-            android:textColor="@color/gray"
-            android:textSize="@dimen/_12ssp"
-            android:textStyle="bold"
-            android:maxLines="1"
-            android:ellipsize="end" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/mView"
+                android:layout_width="@dimen/_16sdp"
+                android:layout_height="@dimen/_16sdp"
+                android:paddingEnd="@dimen/_4sdp"
+                android:src="@drawable/ic_double_check" />
+
+            <TextView
+                android:id="@+id/mContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Contents"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/_12ssp"
+                android:textStyle="bold"
+                android:maxLines="1"
+                android:ellipsize="end" />
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
