--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
                 <ImageView
                     android:layout_width="@dimen/_17sdp"
                     android:layout_height="@dimen/_17sdp"
-                    android:src="@drawable/ic_user"
+                    android:src="@drawable/ic_contact"
                     android:tint="@color/white" />
             </LinearLayout>
 
