--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -105,6 +105,16 @@
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/cAlert"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@color/gray">
+
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/cMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
