--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,12 +106,13 @@
                 android:layout_height="@dimen/_25sdp"
                 android:layout_weight="0.9"
                 android:paddingHorizontal="@dimen/_8sdp"
-                android:hint="Pencarian Nama"
+                android:hint="Search"
                 android:textColorHint="@color/light_gray"
                 android:textSize="@dimen/_12ssp"
                 android:textColor="@color/white"
                 android:gravity="center_vertical"
                 android:singleLine="true"
+                android:imeOptions="actionSearch"
                 android:background="@android:color/transparent" />
 
             <LinearLayout
